Updating About us page
1.Меняем титул на About us
2.Стрелка на ссылках в конце для Services должна смотреть в другую сторону и быть перед текстом
3.Изгибающееся часть с хлебными крошками должна начинаться с серых краев (см. телеграм)
4.Найди другую иконку для > в хлебных крошках

+Added origenal content

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
     <section class="about-title parallax-window" data-parallax="scroll" data-image-src="img/mask.png"">
         <div class="cj-container">
-            <h1>About Us</h1>
+            <h1>About us</h1>
             <ul class="breadcrumbs">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -88,7 +88,12 @@
     <section class="about-description">
         <div class="cj-container">
             <article>
-                Pellentesque pulvinar pellentesque habitant morbi tristique. Id diam vel quam elementum pulvinar etiam. Tristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Lacus vel facilisis volutpat est velit egestas dui id ornare.Pellentesque pulvinar pellentesque habitant morbi tristique. Id diam vel quam elementum pulvinar etiam. Tristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Lacus vel facilisis volutpat est velit egestas dui id ornare. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Lacus vel facilisis volutpat est velit egestas dui id ornare.Pellentesque pulvinar pellentesque habitant morbi tristique. Id diam vel quam elementum pulvinar etiam. Tristique senectus et netus et. Lacus viverra vitae congue.
+                Who we are
+                Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.
+                Our vision
+                Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. 
+                Our goal
+                We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via ICO.
             </article>
         </div>
     </section><!-- DESCRIPTION -->
@@ -111,60 +116,73 @@
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member">
                         <img src="img/member-picture.png" alt="team-member">
-                        <h3 class="member-name">Tellus Pellen</h3>
-                        <h4 class="member-position">Tristique senectus</h4>
+                        <h3 class="member-name">Satoshi Mishima</h3>
+                        <h4 class="member-position">Founder</h4>
                         <article>
-                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                            Continuous entrepreneur and battle-hardened Investor, captured by blockchain technology. In 2005, he was the youngest among the CEO honored with "500 CEO who will revolutionize Japan” award. For last ten years, he has been providing support for foreign companies, which want to make a successful business in the Japanese market. Now He is focused on building growth for blockchain ventures.
+
+                            Motto: Your dream never runs away from you. You run away from your dream.
                         </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member">
                         <img src="img/member-picture.png" alt="team-member">
-                        <h3 class="member-name">Tellus Pellen</h3>
-                        <h4 class="member-position">Tristique senectus</h4>
+                        <h3 class="member-name">Golodniy Sergei</h3>
+                        <h4 class="member-position">Representative Director</h4>
                         <article>
-                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                            Successmarker, TroubleShooter, expert-coordinator of numerous transnational projects.
+                            His reach experience, excellent Japanese language skills and a keen passion to blockchain and cryptocurrency allows him to provide a bridge between Ukrainian companies and Japanese investors.
+
+                            Motto: Never Give up!
                         </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member">
                         <img src="img/member-picture.png" alt="team-member">
-                        <h3 class="member-name">Tellus Pellen</h3>
-                        <h4 class="member-position">Tristique senectus</h4>
+                        <h3 class="member-name">Oleh Pavlichenko</h3>
+                        <h4 class="member-position">Executive Adviser</h4>
                         <article>
-                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                            Cosmopolitan with great desire to make a difference. He has been living in Japan more than 12 years and has a wide range of experience in the marketing and IT development fields. In the CoinJapan company he provides a digital marketing and localization of customers` projects.
+
+                            Motto: Measure what is measurable, and make measurable what is not.
                         </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member">
                         <img src="img/member-picture.png" alt="team-member">
-                        <h3 class="member-name">Tellus Pellen</h3>
-                        <h4 class="member-position">Tristique senectus</h4>
+                        <h3 class="member-name">Artem Timsun</h3>
+                        <h4 class="member-position">Head of Communications</h4>
                         <article>
-                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                            Video-producer and co-founder of the first Ukrainian online TV WaZZZup.TV, CEO of the models agency "SQS models" and creative advertising agency "MV Creative". He had experience on TV, Radio,  and artist managment fields, working together with famous Ukrainian stars like Oleg Skripka, Green Gray, and others. Was the executive producer in the Debora, DataBase, and Dikosound companies. Now He is enthusiastic in blockchain technology and has conducted several successful PR campaigns for well-known blockchain projects and start-ups.
+
+                            Motto: Here and Now!
                         </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member">
                         <img src="img/member-picture.png" alt="team-member">
-                        <h3 class="member-name">Tellus Pellen</h3>
-                        <h4 class="member-position">Tristique senectus</h4>
+                        <h3 class="member-name">Vladimir Seferovblockchain</h3>
+                        <h4 class="member-position">Architect</h4>
                         <article>
-                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                            Master Degree in Economics, five years of experience in cryptomarkets, smart-contracts programmer, deep experience in tokens economy. 
+                            Auditor of ICO projects in Coinjapan.
+                            Motto: Concordia, Integritas, Industria.
                         </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member">
                         <img src="img/member-picture.png" alt="team-member">
-                        <h3 class="member-name">Tellus Pellen</h3>
-                        <h4 class="member-position">Tristique senectus</h4>
+                        <h3 class="member-name">Medyanik Anastasiya</h3>
+                        <h4 class="member-position">Office Manager</h4>
                         <article>
-                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                            BD in Oriental Studies, Japanese language translator in the field related to the blockchain technologies. Her Japanese language skills were improved for the years of living in sunny Okinawa. She gives preference to the exact sciences and is interesting in the problems of the radiation on living organisms and translating of the physical encyclopedia from the Japanese language.
+
+                            Motto: The more I learn, the more I understand that I know nothing.
                         </article>
                     </div>
                 </div>
@@ -177,8 +195,8 @@
             <div class="links-container">
                 <div class="about-projects-service">
                    <a href="#">
-                    <span>Services</span>
                     <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                    <span>Services</span>
                 </a>
             </div>
             <div class="about-projects-link">
