Updating About us page
+Added anoimation

--- a/about.html
+++ b/about.html
@@ -87,8 +87,7 @@
 
     <section class="about-description">
         <div class="cj-container">
-            <article>
-                Who we are
+            <article data-css-animate="trigger">
                 Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.
                 Our vision
                 Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. 
@@ -114,7 +113,7 @@
             <h2 class="section-header">Our Team</h2>
             <div class="row team-members">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member">
+                    <div class="team-member" data-css-animate="trigger">
                         <img src="img/member-picture.png" alt="team-member">
                         <h3 class="member-name">Satoshi Mishima</h3>
                         <h4 class="member-position">Founder</h4>
@@ -126,7 +125,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member">
+                    <div class="team-member" data-css-animate="trigger">
                         <img src="img/member-picture.png" alt="team-member">
                         <h3 class="member-name">Golodniy Sergei</h3>
                         <h4 class="member-position">Representative Director</h4>
@@ -139,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member">
+                    <div class="team-member" data-css-animate="trigger">
                         <img src="img/member-picture.png" alt="team-member">
                         <h3 class="member-name">Oleh Pavlichenko</h3>
                         <h4 class="member-position">Executive Adviser</h4>
@@ -151,7 +150,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member">
+                    <div class="team-member" data-css-animate="trigger">
                         <img src="img/member-picture.png" alt="team-member">
                         <h3 class="member-name">Artem Timsun</h3>
                         <h4 class="member-position">Head of Communications</h4>
@@ -163,7 +162,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member">
+                    <div class="team-member" data-css-animate="trigger">
                         <img src="img/member-picture.png" alt="team-member">
                         <h3 class="member-name">Vladimir Seferovblockchain</h3>
                         <h4 class="member-position">Architect</h4>
@@ -175,7 +174,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member">
+                    <div class="team-member" data-css-animate="trigger">
                         <img src="img/member-picture.png" alt="team-member">
                         <h3 class="member-name">Medyanik Anastasiya</h3>
                         <h4 class="member-position">Office Manager</h4>
@@ -193,13 +192,13 @@
     <section class="about-links">
         <div class="cj-container">
             <div class="links-container">
-                <div class="about-projects-service">
+                <div class="about-projects-service" data-css-animate="trigger">
                    <a href="#">
                     <img src="img/arrow-in-circle.png" alt="arrow in circle">
                     <span>Services</span>
                 </a>
             </div>
-            <div class="about-projects-link">
+            <div class="about-projects-link" data-css-animate="trigger">
                 <a href="#" class="">
                     <span>Projects</span>
                     <img src="img/arrow-in-circle.png" alt="arrow in circle">
