Added Services page +updated css sructure

--- a/about.html
+++ b/about.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About US</title>
+
     <link rel="stylesheet" href="css/lib/owl.carousel.min.css">
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lib/animate.min.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/fonts.css">
+
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/services.css">
 
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
@@ -54,7 +58,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a class="active-nav-item" href="about.html">About</a></li>
-                        <li><a href="#">Services</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
@@ -75,7 +79,7 @@
 
     <br><br><br>
 
-    <section class="about-title parallax-window" data-parallax="scroll" data-image-src="img/mask.png"">
+    <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/mask.png">
         <div class="cj-container">
             <h1>About us</h1>
             <ul class="breadcrumbs">
@@ -189,17 +193,17 @@
         </div>
     </section><!-- TEAM -->
 
-    <section class="about-links">
+    <section class="bottom-links">
         <div class="cj-container">
-            <div class="links-container">
-                <div class="about-projects-service" data-css-animate="trigger">
-                   <a href="#">
-                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
+            <div class="bottom-links-container">
+                <div class="services-link" data-css-animate="trigger">
+                 <a href="services.html">
+                    <img class="left-bottom-link-arrow" src="img/arrow-in-circle.png" alt="arrow in circle">
                     <span>Services</span>
                 </a>
             </div>
-            <div class="about-projects-link" data-css-animate="trigger">
-                <a href="#" class="">
+            <div class="projects-link" data-css-animate="trigger">
+                <a href="#">
                     <span>Projects</span>
                     <img src="img/arrow-in-circle.png" alt="arrow in circle">
                 </a>
