--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/lib/owl.carousel.min.css">
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lib/animate.min.css">
-    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -18,6 +17,7 @@
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
+    
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
@@ -38,7 +38,7 @@
 <header class="header">
     <div class="header-container">
         <div class="logo">
-            <a href="index.html"><img src="img/logotype.png" alt="Logoipe"></a>
+            <img src="img/logotype.png" alt="Logoipe">
         </div>
         <button class="menu-control external">
             <span></span>
@@ -47,9 +47,9 @@
             <p class="header-controls-title">CoinJapan</p>
             <nav class="header-navigation">
                 <ul>
-                    <li><a class="active-nav-item" href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a class="active-nav-item" href="services.html">Services</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Partners</a></li>
                     <li><a href="#">Carriers</a></li>
