updated services page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
+    
     <link rel="stylesheet" href="css/lib/owl.carousel.min.css">
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lib/animate.min.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/fonts.css">
+
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/services.css">
 
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
@@ -47,9 +52,9 @@
             <p class="header-controls-title">CoinJapan</p>
             <nav class="header-navigation">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active-nav-item" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a class="active-nav-item" href="services.html">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Partners</a></li>
                     <li><a href="#">Carriers</a></li>
