--- a/services.html
+++ b/services.html
@@ -25,6 +25,14 @@
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     
 
+    <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
+    <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
+    <script type="text/javascript" src="js/lib/parallax.min.js"></script>
+
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
     <script type="text/javascript" src="js/projectsAutocount.js"></script>
@@ -33,6 +41,8 @@
     <script type="text/javascript" src="js/homeTitleFix.js"></script>
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
+    <script type="text/javascript" src="js/breadcrump.js"></script>
+    <script type="text/javascript" src="js/paralax.js"></script>
 </head>
 <body>
 
@@ -54,9 +64,9 @@
                 <p class="header-controls-title">CoinJapan</p>
                 <nav class="header-navigation">
                     <ul>
-                        <li><a class="active-nav-item" href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a class="active-nav-item" href="services.html">Services</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
@@ -76,64 +86,162 @@
         </div>
     </header>
 
-    <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/mask.png">
-        <div class="cj-container">
-            <h1>Services</h1>
-            <ul class="breadcrumbs">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-            </ul>    
+    <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/sistema-de-gestao.png">
+        <div class="page-titke-overlay">
+            <div class="cj-container">
+                <h1>Services</h1>
+                <ul class="breadcrumbs">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                </ul>    
+            </div>
         </div>
     </section><!-- TITLE -->
 
-    <section class="bottom-links">
-            <div class="cj-container">
-                <div class="bottom-links-container">
-                    <div class="services-link" data-css-animate="trigger">
-                     <a href="services.html">
-                        <img class="left-bottom-link-arrow" src="img/arrow-in-circle.png" alt="arrow in circle">
-                        <span>Services</span>
-                    </a>
-                </div>
-                <div class="projects-link" data-css-animate="trigger">
-                    <a href="#">
-                        <span>Projects</span>
-                        <img src="img/arrow-in-circle.png" alt="arrow in circle">
-                    </a>
+    <section class="services-description">
+        <div class="cj-container">
+            <h2>Your success story begins here</h2>
+            <article>
+                <p>The Japanese market is one of the most dynamic and attractive markets, but it is not an easy task to conquer it. It does not matter what your company reached and if it has the name in the world or not.
+                    The strategy that you have used earlier will not bring you any benefit in Japan. Rather on the contrary. In the best case it will slow down the promotion of the product, how it happened with Uber and FaceBook, which could not fully capture Japanese market. In the worst case you will have to cease your activity, how it happened with eBay.
+
+                    Other, equally well-known companies such as Amazon, Apple, Starbucks were able to stay in the Japanese market and even take a leadership position just because they have changed their strategy. They have adapted to the specificity of the Japanese market, its culture and accepted business rules.
+
+                    There are three fundamental conditions that are necessary for gaining success in the Japanese market:
+                </p>
+                <ul>
+                    <li>Professional localization of your product (authenticity of the translation helps to avoid ambiguity and increase the level of trust);</li>
+                    <li>Development of an effective strategy, with considering the features of a product or service;</li>
+                    <li>Willingness to follow the rules of doing business in Japan.</li>
+                </ul>
+                <p>Partnerships with CoinJapan is your guarantee of entering Japanese investment market for the providing of successful ICO. We will help to raise funds for your project because we understand the market, know its features, requirements and business rules.
+
+                    There are three components that are the basis of our confidence in the successful attraction of Japanese investment to your business:
+                </p>
+                <ul>
+                    <li>Promotion of what is interesting for Japanese investors;
+                    </li>
+                    <li>Using of methods adopted in Japanese business;</li>
+                    <li>The growth and reputation of our company are related to the number of successful ICO</li>
+                </ul>
+                <p>A wise decision to cooperate with CoinJapan will open your business for investment from Japan. We are sure in our capabilities and can create solutions for the growth of your business!</p>
+            </article>
+        </div>
+    </section><!-- TITLE -->
+
+    <section class="main-service">
+        <div class="cj-container">
+            <div class="sevise-border">
+                <h2><span>1</span>Strategic Advisory (FREE)</h2>
+                <article>
+                    <p>On the first stage of our cooperation we will help you to appraise the strengths, weaknesses, opportunities and threats of your project. After the appraisal our experts will help you to develop “must do” activities plan to solve problems and use advantages. It allows to prepare for entering in the investment market. Their recommendations are based on research of financial reports, market trends, and assessment of competitors.
+                    </p>
+                </article>
+                <div class="cj-btn-container">
+                    <a href="#" class="cj-btn" data-css-animate="trigger"><span>Contact us</span></a>
                 </div>
             </div>
         </div>
-    </section><!-- LINKS -->
+    </section><!-- MAIN-SERVICES-BLOCK -->
 
-    <footer class="footer">
-        <div class="footer-container">
+    <section class="ather-services">
+        <div class="cj-container">
             <div class="row">
-                <div class="col-12">
-                    <span class="footer-connect-us">Connect with us</span>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="sevise-border">
+                        <h2><span>2</span>ICO in Japan</h2>
+                        <article>
+                            <ul>
+                                <li>ICO strategy and planning</li>
+                                <li>Fundraising via Pre-sale</li>
+                                <li>Fundraising via ICO</li>
+                                <li>Putting on the listings of Japanese exchanges</li>
+                                <li>Affiliate Programs</li>
+                                <li>Dashboard Solutions</li>
+                            </ul>
+                        </article>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="social-links">
-                        <a href="#" class="fb-icon"></a>
-                        <a href="#" class="twitter-icon"></a>
-                        <a href="#" class="telegram-icon"></a>
-                        <a href="#" class="youtube-icon"></a>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="sevise-border">
+                        <h2><span>3</span>Marketing</h2>
+                        <article>
+                            <ul>
+                                <li>Localization (Whitepaper, web, marketing materials)</li>
+                                <li>Online advertisement in Japan</li>
+                                <li>Promotion to Japanese «angel investors»</li>
+                                <li>Press releases on Japanese media</li>
+                                <li>Public Relations</li>
+                            </ul>
+                        </article>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="sevise-border">
+                        <h2><span>4</span>Support</h2>
+                        <article>
+                            <ul>
+                               <li>Legal consultation</li>
+                               <li>Sales Channel Development after ICO</li>
+                               <li>Long Term Business Development</li>
+                               <li>Partner Search</li>
+                               <li>Sales support</li>
+                            </ul>
+                        </article>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="copyright">© 2018 CoinJapan</div>
-                </div>
+        </div>
+    </section>
+
+    <section class="bottom-links">
+        <div class="cj-container">
+            <div class="bottom-links-container">
+                <div class="services-link" data-css-animate="trigger">
+                 <a href="services.html">
+                    <img class="left-bottom-link-arrow" src="img/arrow-in-circle.png" alt="arrow in circle">
+                    <span>Services</span>
+                </a>
             </div>
-            <div class="footer-go-to-top" data-go-to-top="btn">
-                <img src="img/arrowGoToTop.png" alt="go to top">
+            <div class="projects-link" data-css-animate="trigger">
+                <a href="#">
+                    <span>Projects</span>
+                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                </a>
             </div>
         </div>
-    </footer>
-    <div id="preloader"
-    style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
-    <script src="js/main.js"></script>
+    </div>
+</section><!-- LINKS -->
+
+<footer class="footer">
+    <div class="footer-container">
+        <div class="row">
+            <div class="col-12">
+                <span class="footer-connect-us">Connect with us</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="social-links">
+                    <a href="#" class="fb-icon"></a>
+                    <a href="#" class="twitter-icon"></a>
+                    <a href="#" class="telegram-icon"></a>
+                    <a href="#" class="youtube-icon"></a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="copyright">© 2018 CoinJapan</div>
+            </div>
+        </div>
+        <div class="footer-go-to-top" data-go-to-top="btn">
+            <img src="img/arrowGoToTop.png" alt="go to top">
+        </div>
+    </div>
+</footer>
+<div id="preloader"
+style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
+<script src="js/main.js"></script>
 </body>
 </html>
